# ros2-platformio

./: .gitignore  README.md
Common/ESP32_ROS2_Serial/: platformio.ini
Common/ESP32_ROS2_Serial/src/: main.cpp
Common/RTT/: platformio.ini
Common/RTT/src/: main.cpp
src/esp32_comm_cpp/: CMakeLists.txt  package.xml
src/esp32_comm_cpp/src/: esp32_comm.cpp
src/esp32_comm_python/: package.xml  setup.cfg  setup.py
src/esp32_comm_python/esp32_comm_python/: esp32_comm_python.py
src/rtt_serial_cpp_pkg/: CMakeLists.txt  package.xml
src/rtt_serial_cpp_pkg/src/: rtt_serial_node.cpp
src/rtt_serial_pkg/: package.xml  setup.cfg  setup.py
src/rtt_serial_pkg/rtt_serial_pkg/: rtt_serial_node.py
